Bug 443786 - Enabling Accent Color features adds a header to color schemes that don't have one
Summary: Enabling Accent Color features adds a header to color schemes that don't have...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 5.23.0
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 443815 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-10-15 13:10 UTC by popov895
Modified: 2021-10-18 22:02 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.1
Sentry Crash Report:


Attachments
Header (60.05 KB, image/png)
2021-10-15 13:10 UTC, popov895
Details
Color scheme without header (2.70 KB, text/plain)
2021-10-15 13:10 UTC, popov895
Details
kdeglobals (3.23 KB, text/plain)
2021-10-15 17:53 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2021-10-15 13:10:03 UTC
Created attachment 142472 [details]
Header

SUMMARY

Enabling Accent Color feature forces to show header even if the current color scheme doesn't have one. In the ~/.config/kdeglobals I can see [Colors:Header] section, which is missing from the original color scheme file.

SOFTWARE/OS VERSIONS

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.3
Graphics Platform: X11
Comment 1 popov895 2021-10-15 13:10:27 UTC
Created attachment 142473 [details]
Color scheme without header
Comment 2 Nate Graham 2021-10-15 16:24:31 UTC
Ugh.

Can you attach the color scheme file that does have the inappropriately-added header section, for completeness' sake?
Comment 3 popov895 2021-10-15 17:53:29 UTC
Created attachment 142480 [details]
kdeglobals
Comment 4 Nate Graham 2021-10-15 21:29:14 UTC
Thanks, that's helpful. I'll see what I can do.
Comment 5 Nate Graham 2021-10-17 22:20:09 UTC
*** Bug 443815 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2021-10-18 19:50:28 UTC
Working on this. To fix it, it looks like I'm also going to need to fix Bug 438273, so I'll try to do that too. The issues are quite interrelated. In fact they're really the same issue, just applied to different places.
Comment 7 Nate Graham 2021-10-18 21:29:43 UTC
Never mind, they are independent issues.
Comment 8 Bug Janitor Service 2021-10-18 21:33:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1126
Comment 9 Nate Graham 2021-10-18 22:01:50 UTC
Git commit ebd4e8e9a229e8222409f9cf403826b50232ec52 by Nate Graham.
Committed on 18/10/2021 at 21:30.
Pushed by ngraham into branch 'master'.

kcms/colors: Don't apply header accent colors to non-Header color schemes

When applying an accent color, the color was added to the color scheme's
Header color group. But not all color schemes have this group, and
adding it made the color scheme break in creative ways.
FIXED-IN: 5.23.1

M  +8    -0    kcms/colors/colorsapplicator.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ebd4e8e9a229e8222409f9cf403826b50232ec52
Comment 10 Nate Graham 2021-10-18 22:02:10 UTC
Git commit ef1b01c680ca1961757e4509f890d89def1cfc66 by Nate Graham.
Committed on 18/10/2021 at 22:02.
Pushed by ngraham into branch 'Plasma/5.23'.

kcms/colors: Don't apply header accent colors to non-Header color schemes

When applying an accent color, the color was added to the color scheme's
Header color group. But not all color schemes have this group, and
adding it made the color scheme break in creative ways.
FIXED-IN: 5.23.1


(cherry picked from commit ebd4e8e9a229e8222409f9cf403826b50232ec52)

M  +8    -0    kcms/colors/colorsapplicator.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ef1b01c680ca1961757e4509f890d89def1cfc66