kcms/colors: Don't apply header accent colors to non-Header color schemes

When applying an accent color, the color was added to the color scheme's
Header color group. But not all color schemes have this group, and
adding it made the color scheme break in creative ways.

BUG: 443786
FIXED-IN: 5.23.1